--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -8,7 +8,7 @@
       <table class="w-100 text-left table-condensed">
         <thead>
           <tr class= "header">
-            <th class="text-center col1">準位</th>
+            <th class="text-center col1">順位</th>
             <th class="col2">タイトル(分類・カテゴリー)</th>
             <th class="col3 text-center">平均レビュー</th>
           </tr>
