--- a/app/views/admin/knowledges/index.html.erb
+++ b/app/views/admin/knowledges/index.html.erb
@@ -2,7 +2,7 @@
     <%= stylesheet_link_tag 'admin/knowledges/index.css' %>
 <% end %>
 <div class="container-fluid allbox pt-4">
-  <div class="search d-flex justify-content-between">
+  <div class="search justify-content-between">
     <%= form_with url: admin_knowledges_path, method: :GET, class: 'search-form position-relative' do |f| %>
       <%= f.text_field :search, placeholder: "キーワード検索", class: 'w-100 pl-1' %>
       <%= image_submit_tag("search_image.png", class: 'search_image') %>
@@ -11,15 +11,15 @@
   </div>
 
   <div class="row justify-content-center mt-3">
-    <div class="col-8 categories-search">
+    <div class="categories-search">
       <h5 class="categories-title text-center my-3">カテゴリー一覧</h5>
       <%= form_with url: admin_knowledges_path, method: :GET, class: 'categories-search-form' do |f| %>
         <div class="categories-checkbox d-flex flex-wrap">
         <%= f.collection_check_boxes :categories_search, @categories, :id, :name, {include_hidden: false} do |b| %>
-          <div class="col-2 px-2 mb-3 d-flex">
-            <%= b.label class: 'label-checkbox d-flex' do %>
-              <p><%= b.check_box class: 'mr-1'%></p>
-              <p><%= b.text %></p>
+          <div class="px-2 mb-3 category-list">
+            <%= b.label class: 'label-checkbox d-flex mb-0' do %>
+              <p class="mb-0"><%= b.check_box class: 'mr-1'%></p>
+              <p class="mb-0"><%= b.text %></p>
             <% end %>
           </div>
         <% end %>
@@ -36,7 +36,9 @@
     <% @knowledges.each_with_index do |knowledge, i| %>
     <%= link_to admin_knowledge_path(knowledge.id, search_categories: @knowledges.distinct().pluck(:category_id), index: i), class: 'text-dark' do %>
     <div class="article px-3 py-1">
-      <%= image_tag knowledge.get_image, class: 'image1' %>
+      <div class="image-all">
+        <%= image_tag knowledge.get_image, class: 'image1' %>
+      </div>
       <div class="article-content ml-3 flex-grow-1">
         <h5 class="font-weight-bold"><%= knowledge.title %></h5>
         <% end %>
